--- a/gb/18/9/13/n10711049.md
+++ b/gb/18/9/13/n10711049.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bmokpd3786/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bmokpd3786/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bmokpd3786/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳洲逾百Woolworths忠诚计划客户积分被偷</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/06/91476124-e1466508068662-600x400.jpg" />
 <h6>澳洲超市Woolworths改变退款政策，对疯抢厕纸等商品的顾客，拒绝退款。（GREG WOOD/AFP/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2018年09月13日讯】（大纪元记者肖婕<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%B6%85%E5%B8%82.md#1">超市</a>——Woolworths忠诚计划的130名客户账户的<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E7%A7%AF%E5%88%86.md#1">积分</a><ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%A2%AB%E7%9B%97.md#1">被盗</a>用。为此，该超市已加强了客户系统的安全措施。</p>
-<p>过去几个月来，行骗者用Woolworths忠诚客户奖励卡（Rewards）账户来兑现<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E7%A7%AF%E5%88%86.md#1">积分</a>。但经调查发现，没有证据表明该<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%B6%85%E5%B8%82.md#1">超市</a>的数据系统已被攻破。</p>
+<p>【大纪元2018年09月13日讯】（大纪元记者肖婕<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B6%85%E5%B8%82.md#1">超市</a>——Woolworths忠诚计划的130名客户账户的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A7%AF%E5%88%86.md#1">积分</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%A2%AB%E7%9B%97.md#1">被盗</a>用。为此，该超市已加强了客户系统的安全措施。</p>
+<p>过去几个月来，行骗者用Woolworths忠诚客户奖励卡（Rewards）账户来兑现<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A7%AF%E5%88%86.md#1">积分</a>。但经调查发现，没有证据表明该<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B6%85%E5%B8%82.md#1">超市</a>的数据系统已被攻破。</p>
 <p>Woolworths超市说，在130个案例中，所有的奖励卡客户都是通过有效的用户名和密码登录的，这说明行骗者是通过其它渠道或网络获得其用户资料的。</p>
 <p>昆士兰科技大学（QUT）商学院的莫蒂默（Gary Mortimer）博士在接受九号台新闻网采访时说：“我怀疑这些骗子可能是通过社交媒体获得这些登录信息的。”</p>
 <p>“我们经常在社交媒体上看到骗局，点击这里，你可以得到150澳元的WooWordes礼品卡或者Coles超市的FlyBuys卡。骗子发给你一个链接，要求你提供忠诚计划账户信息，然后骗子就得到了他们想要的一切。”他说。</p>
@@ -23,42 +23,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/6/14/n10483501.md#1">维州Coles和Woolworths将不再提供一次性购物袋</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/6/22/n10504141.md#1">Woolworths取消一次性塑料袋两日?顾客抱怨不断</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/6/29/n10522648.md#1">Woolworths让步 未来10天将继续提供免费塑料袋</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/7/6/n10541447.md#1">Woolworths与Caltex达成15年协议 合作油站超700</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/7/25/n10588991.md#1">华人区Woolworths超市惊现大老鼠 顾客投诉</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/8/11/n10630743.md#1">15岁少年持刀抢劫Woolworths超市未遂</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/8/20/n10652513.md#1">超市巨头Woolworths新财年面临销售压力</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/9/12/n10708972.md#1">Woolworths售出草莓隐藏钢针 一人因误食入院</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12225894.md#1">澳布市民众集会 抗议中共立国安恶法夺港人自由</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12224135.md#1">中共违背承诺 澳洲谴责其实施港版国安法</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/14/n10483501.md#1">维州Coles和Woolworths将不再提供一次性购物袋</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/22/n10504141.md#1">Woolworths取消一次性塑料袋两日?顾客抱怨不断</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/29/n10522648.md#1">Woolworths让步 未来10天将继续提供免费塑料袋</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/7/6/n10541447.md#1">Woolworths与Caltex达成15年协议 合作油站超700</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/7/25/n10588991.md#1">华人区Woolworths超市惊现大老鼠 顾客投诉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/11/n10630743.md#1">15岁少年持刀抢劫Woolworths超市未遂</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/20/n10652513.md#1">超市巨头Woolworths新财年面临销售压力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/9/12/n10708972.md#1">Woolworths售出草莓隐藏钢针 一人因误食入院</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741321.md#1">上海封城导致造影剂短缺 澳部分手术被迫推迟</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10712571.md#1" target="_blank">林辉：中共地雷战幕后清华师生的惨死</a></li><li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12219819.md#1">【直播】反国安恶法 港人7.1维园大游行</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12224164.md#1">国安恶法38条震惊全球：要管全世界的人</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12221534.md#1">郝海东支持民众抗共 “共产党 你们完了”</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/23/n12207542.md#1">【独家】前微博审核员勇揭中共审查黑幕</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12222770.md#1">班农批西媒无视中共罪责反攻击大纪元</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220609.md#1">为救汪小菲事业八折卖豪宅？大S经纪人回应</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12219022.md#1">传黄秋生拍宣传片喊价228万？北市观传局回应</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220251.md#1">汪峰49岁生日 章子怡携女儿跳萤光舞送祝福</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220365.md#1">与黄秋生合演新片香港开红盘 林嘉欣发表感言</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/27/n12215574.md#1">《地母经》预言的2020年中国水灾和后果</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/12/1/21/n3492348.md#1">令人感动千年    范仲淹</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12219023.md#1">北京冰雹状似中共病毒 这是末日预兆？</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/11/3/19/n3202908.md#1">历史故事：范蠡知进退</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/12/n12180144.md#1">2020庚子年+日食带大周期  预兆中共亡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bmokpd3786/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bmokpd3786/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/13/n10711049.htm">澳洲逾百Woolworths忠诚计划客户积分被偷</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/13/n10711049.htm">澳洲逾百Woolworths忠诚计划客户积分被偷</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bmokpd3786/djy/blob/master/gb/18/9/13/n10711049.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bmokpd3786/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bmokpd3786/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/18/9/13/n10711049.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
